WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159122
Regression(
r202262
): Infinite loop under searchForLinkRemovingExistingDDLinks()
https://bugs.webkit.org/show_bug.cgi?id=159122
Summary
Regression(r202262): Infinite loop under searchForLinkRemovingExistingDDLinks()
Chris Dumez
Reported
2016-06-25 18:14:42 PDT
Infinite loop under searchForLinkRemovingExistingDDLinks().
Attachments
Patch
(1.82 KB, patch)
2016-06-25 18:17 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-06-25 18:14:58 PDT
<
rdar://problem/27014649
>
Chris Dumez
Comment 2
2016-06-25 18:17:09 PDT
Created
attachment 282085
[details]
Patch
Chris Dumez
Comment 3
2016-06-26 09:26:07 PDT
Comment on
attachment 282085
[details]
Patch Clearing flags on attachment: 282085 Committed
r202472
: <
http://trac.webkit.org/changeset/202472
>
Chris Dumez
Comment 4
2016-06-26 09:26:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug