Regression(r202262): Infinite loop under searchForLinkRemovingExistingDDLinks() https://bugs.webkit.org/show_bug.cgi?id=159122 <rdar://problem/27014649>

Reviewed by Ryosuke Niwa.

Infinite loop under searchForLinkRemovingExistingDDLinks() because the
value returned by NodeTraversal::next() was ignored and the node iterator
was never updated.

* editing/cocoa/DataDetection.mm:
(WebCore::searchForLinkRemovingExistingDDLinks):

Canonical link: https://commits.webkit.org/177228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202472 268f45cc-cd09-0410-ab3c-d52691b4dbfc